# automata

./: .gitignore  CMakeLists.txt  README.md  game-of-life.hpp  main.cpp
src/: app.hpp  game-of-life.cpp  game-of-life.hpp  game.hpp  main.cpp  util.cpp  util.hpp
src/ui/: context.hpp  dropdown.hpp  label.hpp  ui.hpp  ui_element.hpp
